--- a/my-app/public/manifest.json
+++ b/my-app/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Yummy Recipes - Genaro Bedenko",
+  "name": "Yummy Recipes - Genaro Bedenko",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "app_icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
