--- a/my-app/.eslintrc
+++ b/my-app/.eslintrc
@@ -15,19 +15,17 @@
       "camelcase": [2, {"properties": "never"}],
       "complexity": ["error", 4],
       "eol-last": "warn",
-      "eqeqeq": "warn",
       "global-require": "error",
       "handle-callback-err": "warn",
       "indent": [1, "tab", {"SwitchCase": 1}],
       "key-spacing": ["error", {"beforeColon": false, "afterColon": true}],
       "linebreak-style": ["warn", "unix"],
       "max-depth": ["error", 3],
-      "max-len": ["warn", { "code": 120, "tabWidth": 4 }],
-      "max-lines": ["warn", 250],
-      "max-lines-per-function": ["warn", 20],
+      "max-len": ["warn", { "code": 200, "tabWidth": 4 }],
+      "max-lines-per-function": ["warn", 40],
       "max-nested-callbacks": ["error", 4],
       "max-params": ["error", 5],
-      "max-statements": ["warn", 20],
+      "max-statements": ["error", 30],
       "no-cond-assign": 2,
       "no-dupe-args": "error",
       "no-dupe-keys": "error",
