--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint-plugin-react": "^7.11.1",
     "formik": "^1.3.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
