--- a/my-app/.eslintrc
+++ b/my-app/.eslintrc
@@ -5,6 +5,7 @@
       "browser": true,
       "jest": true
     },
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 8,
       "sourceType": "module"
@@ -22,8 +23,8 @@
       "key-spacing": ["error", {"beforeColon": false, "afterColon": true}],
       "linebreak-style": ["warn", "unix"],
       "max-depth": ["error", 3],
-      "max-len": ["warn", { "code": 200, "tabWidth": 4 }],
-      "max-lines-per-function": ["warn", 40],
+      "max-len": ["warn", { "code": 250, "tabWidth": 4 }],
+      "max-lines-per-function": ["warn", 100],
       "max-nested-callbacks": ["error", 4],
       "max-params": ["error", 5],
       "max-statements": ["error", 30],
@@ -32,7 +33,7 @@
       "no-dupe-keys": "error",
       "no-duplicate-case": "error",
       "no-empty": "warn",
-      "no-empty-function": 2,
+      "no-empty-function": 1,
       "no-multiple-empty-lines": "warn",
       "no-extra-parens": 2,
       "no-func-assign": 2,
@@ -40,6 +41,8 @@
       "no-magic-numbers": [1, {"ignore": [-1, 0, 1]}],
       "no-multi-spaces": 1,
       "no-multi-str": 1,
+      "react/no-unescaped-entities": 0,
+      "react/prop-types": 0,
       "no-unexpected-multiline": 2,
       "no-unreachable": 2,
       "no-self-assign": 2,
