--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Frontend React App for 304CEM Coursework Assignment",
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint-config-dev": "^2.0.0",
     "eslint-plugin-react": "^7.11.1",
     "formik": "^1.3.1",
     "react": "^16.6.0",
