--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Frontend React App for 304CEM Coursework Assignment",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "eslint-config-dev": "^2.0.0",
     "eslint-plugin-react": "^7.11.1",
     "formik": "^1.3.1",
