--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-dev": "^2.0.0",
     "eslint-plugin-react": "^7.11.1",
     "formik": "^1.3.1",
+    "jsdoc": "^3.5.5",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
