--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Yummy Recipes - Genaro Bedenko",
-  "name": "Yummy Recipes - Genaro Bedenko",
+  "short_name": "CookingHub",
+  "name": "CookingHub",
   "icons": [
     {
       "src": "app_icon.ico",
